--- a/index.html
+++ b/index.html
@@ -6,21 +6,77 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="shortcut icon" href="./favicon-32x32.png" type="image/x-icon" />
 		<link rel="stylesheet" href="./assets/css/style.css" />
-
+		<!-- Bootstrap -->
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+			integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+			crossorigin="anonymous" />
 		<title>Document</title>
 	</head>
 	<body>
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark opacity-75 fixed-top">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="#">Navbar</a>
+				<button
+					class="navbar-toggler"
+					type="button"
+					data-bs-toggle="collapse"
+					data-bs-target="#navbarNav"
+					aria-controls="navbarNav"
+					aria-expanded="false"
+					aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a class="nav-link active" aria-current="page" href="#">Home</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Features</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#">Pricing</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link disabled">Disabled</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
 		<main>
+			
+				<br><br>
+				<br><br>
+				<h2>MIS ÚLTIMOS TRABAJOS</h2>
 			<section class="carrusel" data-mouse-down-at="0" data-prev-percentage="0">
-				<img src="./assets/img/3column-component.jpg" alt="" draggable="false" class="image">
-				<img src="./assets/img/digimon.jpg" alt="" draggable="false" class="image">
-				<img src="./assets/img/nft card.jpg" alt="" draggable="false" class="image">
-				<img src="./assets/img/nimrodel.jpg" alt="" draggable="false" class="image">
-				<img src="./assets/img/product preview.jpg" alt="" draggable="false" class="image">
-				<img src="./assets/img/summary-component.jpg" alt="" draggable="false" class="image">
-				<img src="./assets/img/pizzeria.jpg" alt="" draggable="false" class="image">
+				<img src="./assets/img/3column-component.jpg" alt="" draggable="false" class="image" />
+				<img src="./assets/img/digimon.jpg" alt="" draggable="false" class="image" />
+				<img src="./assets/img/nft card.jpg" alt="" draggable="false" class="image" />
+				<img src="./assets/img/nimrodel.jpg" alt="" draggable="false" class="image" />
+				<img src="./assets/img/product preview.jpg" alt="" draggable="false" class="image" />
+				<img src="./assets/img/summary-component.jpg" alt="" draggable="false" class="image" />
+				<img src="./assets/img/pizzeria.jpg" alt="" draggable="false" class="image" />
+				<img src="./assets/img/vip.jpg" alt="" draggable="false" class="image" />
+			</section>
+			<section>
+				<h1>hola hola</h1>
+				<br><br>
+				<br><br>
+				<h2>jofdsjfsd</h2>
+				<br><br>
+				<br><br>
+				<br><br>
+				<br><br><h3>fjnjkldfjskljfklds</h3>
 			</section>
 		</main>
+		<!-- Bootstrap -->
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+			integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+			crossorigin="anonymous"></script>
 		<!-- JS script -->
 		<script src="./assets/js/script.js"></script>
 	</body>
