--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark opacity-75 fixed-top">
 			<div class="container-fluid">
-				<a class="navbar-brand" href="#">Navbar</a>
+				<a class="navbar-brand" href="#">JIOH19</a>
 				<button
 					class="navbar-toggler"
 					type="button"
@@ -29,28 +29,37 @@
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse" id="navbarNav">
-					<ul class="navbar-nav">
+					<ul class="navbar-nav justify-content-right">
 						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="#">Home</a>
+							<a class="nav-link active" aria-current="page" href="#">RESUMEN</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Features</a>
+							<a class="nav-link" href="#">EXPERIENCIA</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Pricing</a>
+							<a class="nav-link" href="#">TRABAJOS</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link disabled">Disabled</a>
+							<a class="nav-link" href="#">CONTACTO</a>
 						</li>
 					</ul>
 				</div>
 			</div>
 		</nav>
 		<main>
-			
-				<br><br>
-				<br><br>
-				<h2>MIS ÚLTIMOS TRABAJOS</h2>
+			<article >
+				<section id="introduccion">
+					<h1>Hola, soy Juan Oh Kim</h1>
+					<p class="subtitulo">Desarrollador Full-Stack Javascript</p>
+					<p>
+						"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+						minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
+						in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+						officia deserunt mollit anim id est laborum.
+					</p>
+				</section>
+			</article>
+			<h2>MIS ÚLTIMOS TRABAJOS</h2>
 			<section class="carrusel" data-mouse-down-at="0" data-prev-percentage="0">
 				<img src="./assets/img/3column-component.jpg" alt="" draggable="false" class="image" />
 				<img src="./assets/img/digimon.jpg" alt="" draggable="false" class="image" />
@@ -63,13 +72,14 @@
 			</section>
 			<section>
 				<h1>hola hola</h1>
-				<br><br>
-				<br><br>
+				<br /><br />
+				<br /><br />
 				<h2>jofdsjfsd</h2>
-				<br><br>
-				<br><br>
-				<br><br>
-				<br><br><h3>fjnjkldfjskljfklds</h3>
+				<br /><br />
+				<br /><br />
+				<br /><br />
+				<br /><br />
+				<h3>fjnjkldfjskljfklds</h3>
 			</section>
 		</main>
 		<!-- Bootstrap -->
