--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 			</div>
 		</nav>
 		<main>
-			<article >
+			<article>
 				<section id="introduccion">
 					<h1>Hola, soy Juan Oh Kim</h1>
 					<p class="subtitulo">Desarrollador Full-Stack Javascript</p>
@@ -59,28 +59,52 @@
 					</p>
 				</section>
 			</article>
-			<h2>MIS ÚLTIMOS TRABAJOS</h2>
-			<section class="carrusel" data-mouse-down-at="0" data-prev-percentage="0">
-				<img src="./assets/img/3column-component.jpg" alt="" draggable="false" class="image" />
-				<img src="./assets/img/digimon.jpg" alt="" draggable="false" class="image" />
-				<img src="./assets/img/nft card.jpg" alt="" draggable="false" class="image" />
-				<img src="./assets/img/nimrodel.jpg" alt="" draggable="false" class="image" />
-				<img src="./assets/img/product preview.jpg" alt="" draggable="false" class="image" />
-				<img src="./assets/img/summary-component.jpg" alt="" draggable="false" class="image" />
-				<img src="./assets/img/pizzeria.jpg" alt="" draggable="false" class="image" />
-				<img src="./assets/img/vip.jpg" alt="" draggable="false" class="image" />
-			</section>
-			<section>
-				<h1>hola hola</h1>
-				<br /><br />
-				<br /><br />
-				<h2>jofdsjfsd</h2>
-				<br /><br />
-				<br /><br />
-				<br /><br />
-				<br /><br />
-				<h3>fjnjkldfjskljfklds</h3>
-			</section>
+			<article>
+				<section id="resumen">
+					<h2>RESUMEN DE CONOCIMIENTOS</h2>
+					<p>
+						"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+						minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
+						in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+						officia deserunt mollit anim id est laborum.
+					</p>
+				</section>
+			</article>
+			<article>
+				<section id="experiencias">
+					<h2>ÚLTIMAS EXPERIENCIAS LABORALES</h2>
+					<p>
+						"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+						minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
+						in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+						officia deserunt mollit anim id est laborum.
+					</p>
+				</section>
+			</article>
+			<article>
+				<h2>MIS ÚLTIMOS TRABAJOS</h2>
+				<section class="carrusel" data-mouse-down-at="0" data-prev-percentage="0">
+					<img src="./assets/img/3column-component.jpg" alt="" draggable="false" class="image" />
+					<img src="./assets/img/digimon.jpg" alt="" draggable="false" class="image" />
+					<img src="./assets/img/nft card.jpg" alt="" draggable="false" class="image" />
+					<img src="./assets/img/nimrodel.jpg" alt="" draggable="false" class="image" />
+					<img src="./assets/img/product preview.jpg" alt="" draggable="false" class="image" />
+					<img src="./assets/img/summary-component.jpg" alt="" draggable="false" class="image" />
+					<img src="./assets/img/pizzeria.jpg" alt="" draggable="false" class="image" />
+					<img src="./assets/img/vip.jpg" alt="" draggable="false" class="image" />
+				</section>
+			</article>
+			<article>
+				<section id="contactame">
+					<h2>CONTÁCTAME</h2>
+					<p>
+						"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+						minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
+						in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+						officia deserunt mollit anim id est laborum.
+					</p>
+				</section>
+			</article>
 		</main>
 		<!-- Bootstrap -->
 		<script
