--- a/index.html
+++ b/index.html
@@ -6,59 +6,38 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="shortcut icon" href="./favicon-32x32.png" type="image/x-icon" />
 		<link rel="stylesheet" href="./assets/css/style.css" />
-		<!-- Bootstrap -->
-		<link
-			rel="stylesheet"
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-			integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-			crossorigin="anonymous" />
+		<link rel="stylesheet" href="./assets/css/variables.css" />
 		<title>Document</title>
 	</head>
 	<body>
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark opacity-75 fixed-top">
-			<div class="container-fluid">
-				<a class="navbar-brand" href="#">JIOH19</a>
-				<button
-					class="navbar-toggler"
-					type="button"
-					data-bs-toggle="collapse"
-					data-bs-target="#navbarNav"
-					aria-controls="navbarNav"
-					aria-expanded="false"
-					aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarNav">
-					<ul class="navbar-nav justify-content-right">
-						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="#">RESUMEN</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">EXPERIENCIA</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">TRABAJOS</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">CONTACTO</a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</nav>
+		<header class="header">
+			<a href="#" class="logo">Jioh19</a>
+
+			<nav class="navbar">
+				<a href="#" class="active">RESUMEN</a>
+				<a href="#">EXPERIENCIA</a>
+				<a href="#">TRABAJOS</a>
+				<a href="#">CONTACTO</a>
+			</nav>
+		</header>
 		<main>
-			<article>
-				<section id="introduccion">
-					<h1>Hola, soy Juan Oh Kim</h1>
-					<p class="subtitulo">Desarrollador Full-Stack Javascript</p>
+			<section class="home">
+				<div class="home-content">
+					<h1>Hola, soy Juan Oh</h1>
+					<h3 class="subtitulo">Desarrollador Full-Stack Javascript</h3>
 					<p>
-						"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
 						minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
 						in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
 						officia deserunt mollit anim id est laborum.
 					</p>
-				</section>
-			</article>
+					<div class="btn-box">
+						<a href="./assets/img/CV_Juan_Oh.pdf">Descarga CV</a>
+						<a href="#">Hablemos</a>
+					</div>
+				</div>
+			</section>
+
 			<article>
 				<section id="resumen">
 					<h2>RESUMEN DE CONOCIMIENTOS</h2>
@@ -106,12 +85,6 @@
 				</section>
 			</article>
 		</main>
-		<!-- Bootstrap -->
-		<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
-			integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
-			crossorigin="anonymous"></script>
-		<!-- JS script -->
 		<script src="./assets/js/script.js"></script>
 	</body>
 </html>
