--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link rel="shortcut icon" href="./favicon-32x32.png" type="image/x-icon" />
 		<link rel="stylesheet" href="./assets/css/style.css" />
 		<link rel="stylesheet" href="./assets/css/variables.css" />
+		<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 		<title>Document</title>
 	</head>
 	<body>
@@ -35,6 +36,14 @@
 						<a href="./assets/img/CV_Juan_Oh.pdf">Descarga CV</a>
 						<a href="#">Hablemos</a>
 					</div>
+				</div>
+
+				<div class="home-sci">
+					<a href="#"><i class='bx bxl-facebook' ></i></a>
+					<a href="#"><i class='bx bxl-github'></i></a>
+					<a href="#"><i class='bx bxl-linkedin' ></i></a>
+					
+					
 				</div>
 			</section>
 
