--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
 					<a href="#"><i class='bx bxl-facebook' ></i></a>
 					<a href="#"><i class='bx bxl-github'></i></a>
 					<a href="#"><i class='bx bxl-linkedin' ></i></a>
-					
-					
 				</div>
+				<span class="home-imgHover"></span>
 			</section>
 
 			<article>
