--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="shortcut icon" href="./favicon-32x32.png" type="image/x-icon" />
 		<link rel="stylesheet" href="./assets/css/style.css" />
 		<link rel="stylesheet" href="./assets/css/variables.css" />
-		<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+		<link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
 		<title>Document</title>
 	</head>
 	<body>
@@ -15,10 +15,10 @@
 			<a href="#" class="logo">Jioh19</a>
 
 			<nav class="navbar">
-				<a href="#" class="active">RESUMEN</a>
-				<a href="#">EXPERIENCIA</a>
-				<a href="#">TRABAJOS</a>
-				<a href="#">CONTACTO</a>
+				<a href="#" class="active">HOME</a>
+				<a href="#experiencias">EXPERIENCIA</a>
+				<a href="#trabajos">TRABAJOS</a>
+				<a href="#contactame">CONTACTO</a>
 			</nav>
 		</header>
 		<main>
@@ -39,24 +39,12 @@
 				</div>
 
 				<div class="home-sci">
-					<a href="#"><i class='bx bxl-facebook' ></i></a>
-					<a href="#"><i class='bx bxl-github'></i></a>
-					<a href="#"><i class='bx bxl-linkedin' ></i></a>
+					<a href="#"><i class="bx bxl-facebook"></i></a>
+					<a href="#"><i class="bx bxl-github"></i></a>
+					<a href="#"><i class="bx bxl-linkedin"></i></a>
 				</div>
 				<span class="home-imgHover"></span>
 			</section>
-
-			<article>
-				<section id="resumen">
-					<h2>RESUMEN DE CONOCIMIENTOS</h2>
-					<p>
-						"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-						minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
-						in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-						officia deserunt mollit anim id est laborum.
-					</p>
-				</section>
-			</article>
 			<article>
 				<section id="experiencias">
 					<h2>ÚLTIMAS EXPERIENCIAS LABORALES</h2>
@@ -69,16 +57,18 @@
 				</section>
 			</article>
 			<article>
-				<h2>MIS ÚLTIMOS TRABAJOS</h2>
-				<section class="carrusel" data-mouse-down-at="0" data-prev-percentage="0">
-					<img src="./assets/img/3column-component.jpg" alt="" draggable="false" class="image" />
-					<img src="./assets/img/digimon.jpg" alt="" draggable="false" class="image" />
-					<img src="./assets/img/nft card.jpg" alt="" draggable="false" class="image" />
-					<img src="./assets/img/nimrodel.jpg" alt="" draggable="false" class="image" />
-					<img src="./assets/img/product preview.jpg" alt="" draggable="false" class="image" />
-					<img src="./assets/img/summary-component.jpg" alt="" draggable="false" class="image" />
-					<img src="./assets/img/pizzeria.jpg" alt="" draggable="false" class="image" />
-					<img src="./assets/img/vip.jpg" alt="" draggable="false" class="image" />
+				<section id="trabajos">
+					<h2>MIS ÚLTIMOS TRABAJOS</h2>
+					<div class="carrusel" data-mouse-down-at="0" data-prev-percentage="0">
+						<img src="./assets/img/3column-component.jpg" alt="" draggable="false" class="image" />
+						<img src="./assets/img/digimon.jpg" alt="" draggable="false" class="image" />
+						<img src="./assets/img/nft card.jpg" alt="" draggable="false" class="image" />
+						<img src="./assets/img/nimrodel.jpg" alt="" draggable="false" class="image" />
+						<img src="./assets/img/product preview.jpg" alt="" draggable="false" class="image" />
+						<img src="./assets/img/summary-component.jpg" alt="" draggable="false" class="image" />
+						<img src="./assets/img/pizzeria.jpg" alt="" draggable="false" class="image" />
+						<img src="./assets/img/vip.jpg" alt="" draggable="false" class="image" />
+					</div>
 				</section>
 			</article>
 			<article>
