--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<a href="#" class="logo">Jioh19</a>
 
 			<nav class="navbar">
-				<a href="#" class="active">HOME</a>
+				<a href="#">HOME</a>
 				<a href="#experiencias">EXPERIENCIA</a>
 				<a href="#trabajos">TRABAJOS</a>
 				<a href="#contactame">CONTACTO</a>
@@ -62,12 +62,13 @@
 					<div class="carrusel" data-mouse-down-at="0" data-prev-percentage="0">
 						<img src="./assets/img/3column-component.jpg" alt="" draggable="false" class="image" />
 						<img src="./assets/img/digimon.jpg" alt="" draggable="false" class="image" />
+						<img src="./assets/img/vip.jpg" alt="" draggable="false" class="image" />
 						<img src="./assets/img/nft card.jpg" alt="" draggable="false" class="image" />
 						<img src="./assets/img/nimrodel.jpg" alt="" draggable="false" class="image" />
 						<img src="./assets/img/product preview.jpg" alt="" draggable="false" class="image" />
 						<img src="./assets/img/summary-component.jpg" alt="" draggable="false" class="image" />
 						<img src="./assets/img/pizzeria.jpg" alt="" draggable="false" class="image" />
-						<img src="./assets/img/vip.jpg" alt="" draggable="false" class="image" />
+						
 					</div>
 				</section>
 			</article>
