--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
 		<header class="header">
 			<a href="#" class="logo">Jioh19</a>
 
+			<label class="navbtn">
+				<input type="checkbox" onclick="checkbox()"/>
+				<span class="menu"> <span class="hamburger"></span> </span>
+				<ul class="hamburger-item">
+					<li><a href="#">HOME</a></li>
+					<li><a href="#experiencias">EXPERIENCIA</a></li>
+					<li><a href="#trabajos">TRABAJOS</a></li>
+					<li><a href="#contactame">CONTACTO</a></li>
+				</ul>
+			</label>
+
 			<nav class="navbar">
 				<a href="#">HOME</a>
 				<a href="#experiencias">EXPERIENCIA</a>
@@ -37,11 +48,12 @@
 						<a href="#">Hablemos</a>
 					</div>
 				</div>
-
-				<div class="home-sci">
-					<a href="#"><i class="bx bxl-facebook"></i></a>
-					<a href="#"><i class="bx bxl-github"></i></a>
-					<a href="#"><i class="bx bxl-linkedin"></i></a>
+				<div class="container-home-sci">
+					<div class="home-sci">
+						<a href="#"><i class="bx bxl-facebook"></i></a>
+						<a href="#"><i class="bx bxl-github"></i></a>
+						<a href="#"><i class="bx bxl-linkedin"></i></a>
+					</div>
 				</div>
 				<span class="home-imgHover"></span>
 			</section>
