Haciendolo mas responsie v2

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<a href="#" class="logo">Jioh19</a>
 
 			<label class="navbtn">
-				<input type="checkbox" onclick="checkbox()"/>
+				<input type="checkbox" onclick="checkbox()" />
 				<span class="menu"> <span class="hamburger"></span> </span>
 				<ul class="hamburger-item">
 					<li><a href="#">HOME</a></li>
@@ -71,16 +71,19 @@
 			<article>
 				<section id="trabajos">
 					<h2>MIS ÚLTIMOS TRABAJOS</h2>
-					<div class="carrusel" data-mouse-down-at="0" data-prev-percentage="0">
-						<img src="./assets/img/3column-component.jpg" alt="" draggable="false" class="image" />
-						<img src="./assets/img/digimon.jpg" alt="" draggable="false" class="image" />
-						<img src="./assets/img/vip.jpg" alt="" draggable="false" class="image" />
-						<img src="./assets/img/nft card.jpg" alt="" draggable="false" class="image" />
-						<img src="./assets/img/nimrodel.jpg" alt="" draggable="false" class="image" />
-						<img src="./assets/img/product preview.jpg" alt="" draggable="false" class="image" />
-						<img src="./assets/img/summary-component.jpg" alt="" draggable="false" class="image" />
-						<img src="./assets/img/pizzeria.jpg" alt="" draggable="false" class="image" />
-						
+					<div id="wrapper">
+						<i class="bx bxs-left-arrow"></i>
+						<div class="carrusel" data-mouse-down-at="0" data-prev-percentage="0">
+							<img src="./assets/img/3column-component.jpg" alt="" draggable="false" class="image" />
+							<img src="./assets/img/digimon.jpg" alt="" draggable="false" class="image" />
+							<img src="./assets/img/vip.jpg" alt="" draggable="false" class="image" />
+							<img src="./assets/img/nft card.jpg" alt="" draggable="false" class="image" />
+							<img src="./assets/img/nimrodel.jpg" alt="" draggable="false" class="image" />
+							<img src="./assets/img/product preview.jpg" alt="" draggable="false" class="image" />
+							<img src="./assets/img/summary-component.jpg" alt="" draggable="false" class="image" />
+							<img src="./assets/img/pizzeria.jpg" alt="" draggable="false" class="image" />
+						</div>
+						<i class="bx bxs-right-arrow"></i>
 					</div>
 				</section>
 			</article>
