Haciendolo mas responsive v3.4

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				<section id="trabajos">
 					<h2>MIS ÚLTIMOS TRABAJOS</h2>
 					<div id="wrapper">
-						<i class="bx bxs-left-arrow"></i>
+						<i class="bx bxs-left-arrow" id="left"></i>
 						<div class="carrusel" data-mouse-down-at="0" data-prev-percentage="0">
 							<img src="./assets/img/3column-component.jpg" alt="" draggable="false" class="image" />
 							<img src="./assets/img/digimon.jpg" alt="" draggable="false" class="image" />
@@ -83,7 +83,7 @@
 							<img src="./assets/img/summary-component.jpg" alt="" draggable="false" class="image" />
 							<img src="./assets/img/pizzeria.jpg" alt="" draggable="false" class="image" />
 						</div>
-						<i class="bx bxs-right-arrow"></i>
+						<i class="bx bxs-right-arrow" id="right"></i>
 					</div>
 				</section>
 			</article>
