--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="./assets/css/style.css" />
 		<link rel="stylesheet" href="./assets/css/variables.css" />
 		<link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
-		<title>Document</title>
+		<title>Jioh19</title>
 	</head>
 	<body>
 		<header class="header">
@@ -53,6 +53,7 @@
 						<a href="#"><i class="bx bxl-facebook"></i></a>
 						<a href="#"><i class="bx bxl-github"></i></a>
 						<a href="#"><i class="bx bxl-linkedin"></i></a>
+						<a href="#"><i class="bx bxl-whatsapp"></i></a>
 					</div>
 				</div>
 				<span class="home-imgHover"></span>
@@ -92,8 +93,40 @@
 					<h2>CONTÁCTAME</h2>
 					<div class="contactoContainer">
 						<div class="item">
-							<div class="contact"></div>
-							<div class="submit-form"></div>
+							<div class="contact">
+								<div class="first-text">Conectémonos</div>
+								<span class="contact-imgHover"></span>
+								<div class="home-sci">
+									<a href="#"><i class="bx bxl-facebook"></i></a>
+									<a href="#"><i class="bx bxl-github"></i></a>
+									<a href="#"><i class="bx bxl-linkedin"></i></a>
+									<a href="#"><i class="bx bxl-whatsapp"></i></a>
+								</div>
+							</div>
+							<div class="submit-form">
+								<h4 class="second-text">Contáctanos</h4>
+								<form action="">
+									<div>
+										<div class="input-box">
+											<input type="text" class="input" required />
+											<label for="">Nombre</label>
+										</div>
+										<div class="input-box">
+											<input type="email" class="input" required />
+											<label for="">Email</label>
+										</div>
+										<div class="input-box">
+											<input type="tel" class="input" required />
+											<label for="">Teléfono</label>
+										</div>
+										<div class="input-box">
+											<textarea name="" class="input" required id="message" cols="30" rows="10"></textarea>
+											<label for="">Mensaje</label>
+										</div>
+									</div>
+									<input type="submit" class="btn" value="Enviar" />
+								</form>
+							</div>
 						</div>
 					</div>
 				</section>
