Update CV document

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<header class="header">
-			<a href="#" class="logo">Jioh19</a>
+			<a href="#" class="logo bx-burst">Jioh19</a>
 
 			<label class="navbtn">
 				<input type="checkbox" onclick="checkbox()" placeholder="checkbox" />
@@ -36,12 +36,13 @@
 			<section class="home scroll-area">
 				<div class="home-content">
 					<h1>Hola, soy Juan Oh</h1>
-					<h3 class="subtitulo">Desarrollador Full-Stack Javascript</h3>
+					<h3 class="subtitulo">Desarrollador Full-Stack</h3>
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-						minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
-						in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-						officia deserunt mollit anim id est laborum.
+						Comencé en el mundo de la computación a temprana edad de manera autodidacta, y fue así que
+						decidí estudiar Ingeniería Civil en Ciencias de la Computación. Luego entré al mundo laboral con
+						un emprendimiento, Importadora y Comercializadora, encargándome de las Importaciones y ventas al
+						detalle y al por mayor junto con implementar el soporte computacional. Ahora me estoy
+						actualizando para reinsertarme al mundo laboral TI.
 					</p>
 					<div class="btn-box">
 						<a href="./assets/img/CV_Juan_Oh.pdf">Descarga CV</a>
@@ -50,23 +51,40 @@
 				</div>
 				<div class="container-home-sci">
 					<div class="home-sci">
-						<a href="#"><i class="bx bxl-facebook" placeholder="facebook"></i></a>
 						<a href="https://github.com/Jioh19"><i class="bx bxl-github"></i></a>
 						<a href="https://www.linkedin.com/in/jioh19/"><i class="bx bxl-linkedin"></i></a>
 						<a href="https://wa.me/56968987845"><i class="bx bxl-whatsapp"></i></a>
+						<a href="mailto: jioh1982@gmail.com"><i class="bx bxl-gmail"></i></a>
 					</div>
 				</div>
 				<span class="home-imgHover"></span>
 			</section>
 			<article>
 				<section class="scroll-area" id="experiencias">
-					<h2>ÚLTIMAS EXPERIENCIAS LABORALES</h2>
-					<p>
-						"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-						minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
-						in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-						officia deserunt mollit anim id est laborum.
-					</p>
+					<h2>EXPERIENCIAS LABORALES</h2>
+					<ul>
+						<li>2001-2002: Internet PC 24 Administrador de Cyber Café<ul>
+							<li>Armado de Equipos</li>
+							<li>Instalación de Intranet</li>
+							<li>Mantención de sistema de cobranza</li>
+						</ul></li>
+						<li>
+							2009-2017: Comercializadora Innovacenter Ltda Importación, venta al por mayor y detalle de
+							artículos electrónicos <ul>
+								<li>
+									Instalación y mantención de Intranet
+								</li>
+								<li>
+									Instalación y mantención de sistema de vigilancia y DVR Remoto
+								</li>
+								<li>
+									Implementación de servidor LAMP (Linux, Apache, MySQL, PHP)
+								</li>
+								<li>Implementación de sistema de ERP/CRM Dolibarr</li>
+								<li>Implementación de sistema de facturación electrónica</li>
+							</ul>
+						</li>
+					</ul>
 				</section>
 			</article>
 			<article>
@@ -97,10 +115,10 @@
 								<div class="first-text">Conectémonos</div>
 								<span class="contact-imgHover"></span>
 								<div class="home-sci">
-									<a href="#"><i class="bx bxl-facebook"></i></a>
 									<a href="https://github.com/Jioh19"><i class="bx bxl-github"></i></a>
 									<a href="https://www.linkedin.com/in/jioh19/"><i class="bx bxl-linkedin"></i></a>
 									<a href="https://wa.me/56968987845"><i class="bx bxl-whatsapp"></i></a>
+									<a href="mailto: jioh1982@gmail.com"><i class="bx bxl-gmail"></i></a>
 								</div>
 							</div>
 							<div class="submit-form">
@@ -108,7 +126,7 @@
 								<form action="">
 									<div>
 										<div class="input-box">
-											<input type="text" class="input" id="nombre" required/>
+											<input type="text" class="input" id="nombre" required />
 											<label for="nombre">Nombre</label>
 										</div>
 										<div class="input-box">
@@ -120,7 +138,13 @@
 											<label for="tel">Teléfono</label>
 										</div>
 										<div class="input-box">
-											<textarea name="" class="input" required id="message" cols="30" rows="10"></textarea>
+											<textarea
+												name=""
+												class="input"
+												required
+												id="message"
+												cols="30"
+												rows="10"></textarea>
 											<label for="message">Mensaje</label>
 										</div>
 									</div>
